<resources>
  <string name="alert_error_title">Error</string>
  <string name="alert_ok_button">OK</string>
  <string name="error_failed_to_connect_to_device" formatted="false">Failed to connect to device {%s}Reason: %s</string>
  <string name="scan_start">Start</string>
  <string name="scan_stop">Stop</string>
  <string name="standard_license" translatable="false">Cg0CAwQFBgcICQoLDA4PEoACXin45kV0d/psT54YFgexYcw7vPqASuKg3qIDsugUXtBCDDrW2Ql9H87MIBrZdOJTOTDPrCwMeMqFNUoR2W+Szu1hppZON4uEaHWGh0I6SwaoiI/o021I9/4UgBGNwdSlWk+tptNYSLoYKL9DffflZjYwJwgV24Q6dF0misHmQ7oiG9kPKrkzCE9AJgIMYX+o0BrpkAyqwdeGYPI3aBGSzv2YMY4DpsV9lUmNWOlDsMdsNgO1QozUlOrTG5rb788KfZVU/nQ84zY3Xn/1idv3X01LIJHM2+5aRE6Xhfg6NgvVNga8INEnbBKOGxuS1nhlC7ngMqQ5lb2B/He3SzO7DhiAoLuwzy4qCAECAwQFBwgJ</string>
  <string name="client_id" translatable="false">com.atakmap.android.pulsetool.plugin</string>
  <string name="client_secret" translatable="false">Nn7LVRnVW8PIvp3tVo1s1MK829gaZIF4laf</string>
  <string name="config_female">Female</string>
  <string name="config_male">Male</string>
  <string name="config_gender">Gender</string>
  <string name="config_height">Height (m)</string>
  <string name="config_weight">Weight (kg)</string>
  <string name="config_age">Age (y)</string>
  <string name="config_menu_done">Done</string>
  <string name="config_menu_disable_archive">Disable fit archive</string>
  <string name="config_menu_enable_archive">Enable fit archive</string>
  <string name="config_empty_field_error">All fields should be filled with positive values.</string>
  <string name="pair_success_button">Done</string>
  <string name="pair_screen_device_disconnected">Device %s disconnected.</string>
  <string name="pair_screen_device_connection_failed">Device %s failed to connect.</string>
  <string name="pair_screen_device_pairing_failed">Device failed to pair.</string>
  <string name="action_bar_connected_devs">Connected devices</string>
  <string name="action_bar_scanning">Scanning</string>
  <string name="action_bar_config">Configuration</string>
  <string name="action_bar_pair">Pairing devices</string>
  <string name="action_bar_add_goal">Add goal</string>
  <string name="pair_enter_pass_key">Enter passkey</string>
  <string name="connected_forget_device_message">Do you want to forget this device?</string>
  <string name="no_internet_connection">No internet connection</string>
  <string name="alert_dialog_ok">Go Ahead</string>
  <string name="alert_dialog_cancel">Cancel</string>
  <string name="scan_devices_title">Pair a Device</string>
  <string name="scan_devices_msg">No paired device found. Do you want to pair a device?</string>
  <string name="button_keep">Keep</string>
  <string name="button_delete">Delete</string>
  <string name="sync_dialog_results">Sync results</string>
  <string name="date_format_day_month">DD-MM</string>
  <string name="date_format_month_day">MM-DD</string>
  <string name="time_format_twelve_hour">12h</string>
  <string name="time_format_twenty_four_hour">24h</string>
  <string name="time_format">Time Format</string>
  <string name="date_format">Date Format</string>
  <string name="config_language">Language</string>
  <string name="display_orientation">Orientation</string>
  <string name="display_orientation_landscape">Landscape</string>
  <string name="display_orientation_portrait">Portrait</string>
  <string name="display_orientation_landscape_flipped">Landscape flipped</string>
  <string name="display_orientation_portrait_flipped">Portrait flipped</string>
  <string name="display_screen_steps">Steps</string>
  <string name="display_screen_steps_goal">Steps goal</string>
  <string name="display_screen_distance">Distance</string>
  <string name="display_screen_calories">Calories</string>
  <string name="display_screen_time">Time</string>
  <string name="display_screen_date">Date</string>
  <string name="display_screen_heart_rate">Heart rate</string>
  <string name="display_screen_intensity_minutes">Intensity minutes</string>
  <string name="display_screen_floors_climbed">Floors climbed</string>
  <string name="display_screen_timer">Timer</string>
  <string name="display_screen_notifications">Notifications</string>
  <string name="unit_settings">Unit settings</string>
  <string name="screen_settings">Screen settings</string>
  <string name="display_screens">Display screens</string>
  <string name="data_sources">Data Sources</string>
    <string name="custom_apps">Custom Apps</string>
  <string name="watch_faces">Watch Faces</string>
  <string name="auto_activity">Auto activity</string>
  <string name="move_alert">Move Alert</string>
  <string name="heart_rate">Heart rate</string>
  <string name="custom_stride_length">Custom Stride Length</string>
  <string name="walking">Walking (m)</string>
  <string name="running">Running (m)</string>
  <string name="goals">Custom Goals</string>
  <string name="goal_value">Goal value</string>
  <string name="custom_stride_unit">m</string>
  <string name="user_settings">User settings</string>
  <string name="initial_screen">Initial screen</string>
  <string name="auto_upload">Auto upload</string>
  <string name="sync_frequency">Sync frequency</string>
  <string name="backlight_mode">Backlight mode</string>
  <string name="screen_mode">Screen mode</string>
  <string name="custom_stride_step_length">Step length</string>
  <string name="notification">Notification</string>
  <string name="custom_logging">Custom Logging</string>
  <string name="message">Message</string>
  <string name="title">Title</string>
  <string name="send">Send</string>
  <string name="clear">Clear</string>
  <string name="goal_steps">Steps</string>
  <string name="goal_intensity">Intensity minutes</string>
  <string name="goal_floors_climbed">Floors climbed</string>
  <string name="add_goal_existent_goal">Goal already added.</string>
  <string name="unit_system">Unit measurement system</string>
  <string name="unit_system_statute">Statute</string>
  <string name="unit_system_metric">Metric</string>
  <string name="init_failed_title">SDK initialization failed.</string>
  <string name="init_failed_message">Garmin Health SDK failed to initialize. Check your license.</string>
  <string name="init_failed_generic_message">Garmin Health SDK failed to initialize because of unexpected exception.</string>
  <string name="monitoring_tab_title">Monitoring</string>
  <string name="activity_tab_title">Activity</string>
  <string name="activity_move_iq">Move IQ Activity</string>
  <string name="activity_motion_intensity">Motion intensity</string>
  <string name="empty_move_iq_list_message">No move iq activity yet!</string>
  <string name="empty_activity_list_message">No activity yet!</string>
  <string name="empty_monitoring_list_message">No monitoring activity yet!</string>
  <string name="config_english">English</string>
  <string name="config_french">French</string>
  <string name="config_german">German</string>
  <string name="config_italian">Italian</string>
  <string name="config_spanish">Spanish</string>
  <string name="config_croatian">Croatian</string>
  <string name="config_czech">Czech</string>
  <string name="config_danish">Danish</string>
  <string name="config_dutch">Dutch</string>
  <string name="config_finnish">Finnish</string>
  <string name="config_greek">Greek</string>
  <string name="config_hungarian">Hungarian</string>
  <string name="config_norwegian">Norwegian</string>
  <string name="config_polish">Polish</string>
  <string name="config_portuguese">Portuguese</string>
  <string name="config_slovenian">Slovenian</string>
  <string name="config_slovakian">Slovakian</string>
  <string name="config_swedish">Swedish</string>
  <string name="config_russian">Russian</string>
  <string name="config_turkish">Turkish</string>
  <string name="config_latvian">Latvian</string>
  <string name="config_ukrainian">Ukrainian</string>
  <string name="config_arabic">Arabic</string>
  <string name="config_farsi">Farsi</string>
  <string name="config_bulgarian">Bulgarian</string>
  <string name="config_romanian">Romanian</string>
  <string name="config_chinese">Chinese</string>
  <string name="config_japanese">Japanese</string>
  <string name="config_korean">Korean</string>
  <string name="config_taiwanese">Taiwanese</string>
  <string name="config_thai">Thai</string>
  <string name="config_hebrew">Hebrew</string>
  <string name="config_brazilian_portuguese">Brazilian Portuguese</string>
  <string name="config_indonesian">Indonesian</string>
  <string name="config_custom">Custom</string>
  <string name="dialog_keep_data">Do you want to keep data on device after sync?</string>
  <string name="dialog_keep_data_on">Data is not being deleted</string>
  <string name="dialog_keep_data_off">Data is deleted on sync</string>
  <string name="battery_level">Battery level: %s</string>
  <string name="device_uid">UnitId: %s</string>
  <string name="device_address">Address: %s</string>
  <string name="motion_intensity_graph">Motion intensity graph</string>
  <string name="sleep_graph">Sleep graph</string>
  <string name="title_real_time">Real Time Data</string>
  <string name="real_time_steps">Steps\nCurrent: %1$s\nGoal: %2$s</string>
  <string name="real_time_hrv">Heart Rate Variability\n%s</string>
  <string name="real_time_calories">Calories\nActive: %1$s\nTotal: %2$s</string>
  <string name="real_time_floors">Floors\nCurrent: %1$s\nGoal: %2$s</string>
  <string name="real_time_intensity">Intensity Minutes\nDaily Total: %1$s\nWeekly Total: %2$s</string>
  <string name="real_time_heart_rate">Heart Rate\nCurrent Rate: %1$s\nResting Rate: %2$s</string>
  <string name="real_time_stress">Stress\nScore: %s</string>
  <string name="hr_dataSet">Heart Rate/min</string>
  <string name="hr_resting_dataSet">Resting Heart Rate/min</string>
  <string name="hr_description">Heart Rate Chart</string>
  <string name="spo2_dataSet">SPO2</string>
  <string name="stress_description">Stress Level Chart</string>
  <string name="steps_dataSet">Steps</string>
  <string name="steps_goal_dataSet">Steps Goal</string>
  <string name="steps_description">Steps Chart</string>
  <string name="active_calories_dataSet">Active Calories</string>
  <string name="total_calories_dataSet">Total Calories</string>
  <string name="calories_description">Calories Chart</string>
  <string name="floors_climbed_dataSet">Floors Climbed</string>
  <string name="floors_descended_dataSet">Floors Descended</string>
  <string name="floors_description">Floors Chart</string>
  <string name="moderate_intensity_minutes_dataSet">Moderate Intensity Minutes</string>
  <string name="vigorous_intensity_minutes_dataSet">Vigorous Intensity Minutes</string>
  <string name="intensity_minutes_description">Intensity Minutes Chart</string>
  <string name="hrv_dataSet">Heart Rate Variability</string>
  <string name="hrv_description">Heart Rate Variability Chart</string>
  <string name="reset_charts">Reset Charts</string>
  <string name="garmin_health_charts">Garmin Health Charts</string>
    <string name="refresh_charts">Refresh Charts</string>
    <string name="all_charts_refreshed">All charts refreshed.</string>
  <string name="bluetooth_frag_title">Select a Garmin Device</string>
  <string name="location_service_not_available">Location services are not currently available, please try again later.</string>
  <string name="bluetooth_activity_header">Select a Garmin Device</string>
  <string name="scan_switch_label">Scan</string>
  <string name="null_str">null</string>
  <string name="scan_on">\tScanning…</string>
  <string name="scan_off">\tStopped</string>
  <string name="unit_measure_prompt">Select Units</string>
  <string name="gender_prompt">Gender</string>
  <string name="age_hint">Age</string>
  <string name="device_settings">Device Settings</string>
  <string name="minutes">minutes</string>
  <string name="spo2_sleep_description">SPO2 Sleep Monitoring</string>
  <string name="config_sleep_start">Sleep Time</string>
  <string name="config_sleep_end">Wake Time</string>
</resources>