<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

  <TextView
    style="@style/CardHeadingStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/notification" />

  <EditText
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hint="@string/title" />

  <EditText
    android:id="@+id/message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hint="@string/message" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
      android:id="@+id/send"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/send" />

    <Button
      android:id="@+id/clear"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/clear" />
  </LinearLayout>

</LinearLayout>