<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

  <TextView
    style="@style/CardHeadingStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/user_settings" />

  <TextView
    style="@style/SubHeadingStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/config_gender" />

  <RadioGroup
    android:id="@+id/config_gender"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:layout_marginEnd="10dp"
    android:checkedButton="@+id/config_gender_female">

    <RadioButton
      android:id="@+id/config_gender_female"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:checked="true"
      android:text="@string/config_female"
      android:textColor="@color/grey_text_color" />

    <RadioButton
      android:id="@+id/config_gender_male"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/config_male"
      android:textColor="@color/grey_text_color" />
  </RadioGroup>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/config_height"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/config_height"
      android:imeOptions="actionNext"
      android:inputType="numberDecimal"
      android:lines="1" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/config_weight"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/config_weight"
      android:imeOptions="actionNext"
      android:inputType="number"
      android:lines="1" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/config_age"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/config_age"
      android:imeOptions="actionDone"
      android:inputType="number"
      android:lines="1" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/config_sleep_start"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/config_sleep_start"
      android:imeOptions="actionDone"
      android:inputType="number"
      android:lines="1" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/config_sleep_end"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/config_sleep_end"
      android:imeOptions="actionDone"
      android:inputType="number"
      android:lines="1" />

  </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>