<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:orientation="vertical" >

  <TextView
    android:id="@+id/device_settings_header"
    style="@style/CardHeadingStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/device_settings"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Switch
    android:id="@+id/auto_activity_switch"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:text="@string/auto_activity"
    android:textColor="@color/grey_text_color"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/device_settings_header" />

  <Switch
    android:id="@+id/heart_rate_switch"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:text="@string/heart_rate"
    android:textColor="@color/grey_text_color"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/auto_activity_switch" />

  <Switch
    android:id="@+id/auto_upload_switch"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:text="@string/auto_upload"
    android:textColor="@color/grey_text_color"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/heart_rate_switch" />

  <Switch
    android:id="@+id/spo2_sleep_switch"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:text="@string/spo2_sleep_description"
    android:textColor="@color/grey_text_color"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/auto_upload_switch" />

  <com.atakmap.android.pulsetool.plugin.ui.settings.widget.SwitchOptionsView
          android:id="@+id/alert_sov"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:paddingBottom="@dimen/medium_vertical_margin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/spo2_sleep_switch" />

  <com.atakmap.android.pulsetool.plugin.ui.settings.widget.SettingsSpinner
    android:id="@+id/sync_frequency_spinner"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/medium_vertical_margin"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/alert_sov" />

  <EditText
    android:id="@+id/auto_sync_time_edit_text"
    android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:inputType="number"
    android:text="0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/sync_frequency_spinner" />

  <TextView
    android:id="@+id/auto_sync_time_text"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_marginStart="10dp"
    android:text="@string/minutes"
    app:layout_constraintBaseline_toBaselineOf="@id/auto_sync_time_edit_text"
    app:layout_constraintLeft_toRightOf="@id/auto_sync_time_edit_text"
    app:layout_constraintTop_toBottomOf="@id/sync_frequency_spinner"
    tools:text="minutes" />

  <EditText
    android:id="@+id/auto_sync_steps_edit_text"
    android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:inputType="number"
    android:text="0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/auto_sync_time_edit_text" />

  <TextView
    android:id="@+id/auto_sync_steps_text"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_marginStart="10dp"
    android:text="@string/steps"
    app:layout_constraintBaseline_toBaselineOf="@id/auto_sync_steps_edit_text"
    app:layout_constraintLeft_toRightOf="@id/auto_sync_steps_edit_text"
    app:layout_constraintTop_toBottomOf="@id/auto_sync_time_edit_text"
    tools:text="steps" />

  <com.atakmap.android.pulsetool.plugin.ui.settings.widget.SettingsSpinner
    android:id="@+id/backlight_mode_spinner"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/medium_vertical_margin"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/sync_frequency_spinner"
    />

  <com.atakmap.android.pulsetool.plugin.ui.settings.widget.SwitchOptionsView
    android:id="@+id/data_source_list_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/backlight_mode_spinner">
  </com.atakmap.android.pulsetool.plugin.ui.settings.widget.SwitchOptionsView>

  <Button
    android:id="@+id/update_logging_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="Update Logging Settings"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/data_source_list_view" />
</androidx.constraintlayout.widget.ConstraintLayout>